@@ -5,6 +5,7 @@ import entity.Question;
 import org.junit.Before;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
@@ -19,7 +20,7 @@ public class QuestionEntityTest {
         String category = "Books";
         String difficultyLevel = "Medium";
 
-        ArrayList<String> possibleAnswers = new ArrayList<>(List.of(new String[]{"Tinworth", "Godric's Hollow", "Hogsmeade", "Mould-on-the-Wold"}));
+        ArrayList<String> possibleAnswers = new ArrayList<>(Arrays.asList((new String[]{"Tinworth", "Godric's Hollow", "Hogsmeade", "Mould-on-the-Wold"})));
         AnswerPackage answerPackage = new AnswerPackage(
                 possibleAnswers,
                 "Godric's Hollow"
